--- a/GUIDES/DOCUMENTATION/index.html
+++ b/GUIDES/DOCUMENTATION/index.html
@@ -3869,7 +3869,7 @@ And there will be aswell permissions problems because the files were created on 
 
           <p class="lead">
           <strong style="font-weight:bold">
-  Please download the latest stable version and not any nightly builds. This DOCUMENTATION is maybe outdated when you read it and the versions from below are not the latest.
+  Please download the latest stable LTS version and not any nightly or future builds. This DOCUMENTATION is maybe outdated when you read it and the versions from below are not the latest.
 </strong>
     <BR><BR>
 <hr>
@@ -3882,7 +3882,7 @@ And there will be aswell permissions problems because the files were created on 
 <p class="lead">
         <strong style="font-weight:bold; font-size:25px;">Download MAC:  </strong>
 
-          <BR><code class="language-html" data-lang="html"><a target="_blank" href="https://nodejs.org/dist/v10.4.1/node-v10.4.1.pkg">nodejs.org/dist/v10.4.1/node-v10.4.1.pkg</a>    </code>
+          <BR><code class="language-html" data-lang="html"><a target="_blank" href="https://nodejs.org/dist/v12.18.3/node-v12.18.3.pkg">nodejs.org/dist/v12.18.3/node-v12.18.3.pkg</a>    </code>
 </div>
 <p class="lead">
 
@@ -3898,7 +3898,7 @@ And there will be aswell permissions problems because the files were created on 
 
         <strong style="font-weight:bold; font-size:25px;">Download Windows 64-bit:</strong>
 
-        <BR>  <code class="language-html" data-lang="html"><a target="_blank" href="https://nodejs.org/dist/v10.4.1/node-v10.4.1-x64.msi">nodejs.org/dist/v10.4.1/node-v10.4.1-x64.msi</a>    </code>
+        <BR>  <code class="language-html" data-lang="html"><a target="_blank" href="https://nodejs.org/dist/v12.18.3/node-v12.18.3-x64.msi">nodejs.org/dist/v12.18.3/node-v12.18.3-x64.msi</a>    </code>
 
 
 
@@ -3925,20 +3925,19 @@ And there will be aswell permissions problems because the files were created on 
 <p class="lead">
         <strong style="font-weight:bold; font-size:25px;">
         Download Ubuntu & Linux Mint:
-        <BR>- 16.04 & 18.04 Desktop & Server with Desktop (64-bit)
-        <BR>- Linux Mint 19 "Tara" - Cinnamon (64-bit)
+
         </strong>
 
  <BR>
-Here we download Node.js v10.x with curl and then we will install it!
-  <BR>  <code>curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+Here we download Node.js v12.x with curl and then we will install it!
+  <BR>  <code>curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
  <BR> sudo apt-get install -y nodejs</code>
 
 
 
  <BR>  <BR>
         Alternative you can use my 1-Click file which will first remove Node.js and then download & Install Node.js v10.x (This file will also work if you never installed Node.js before)
-  <BR>       <code>INSTALL THIS/SOFTWARE/Node.js/Linux/#NODE.JS v10.x - REMOVE FIRST - THEN REINSTALL - UBUNTU&MINT.sh / .command</code>
+  <BR>       <code>INSTALL THIS/SOFTWARE/Node.js/Linux/#NODE.JS v12.x - REMOVE FIRST - THEN REINSTALL - UBUNTU&MINT.sh / .command</code>
 
 
 <hr>
@@ -3949,12 +3948,12 @@ Alternative as third install method you can download Node.js manually from:
 <BR><code>https://nodejs.org/en/</code>
 <BR>  <BR>
 
-So as example v10.10.0 or any other version will be links like this:
-<BR><code>https://nodejs.org/dist/v10.10.0/node-v10.10.0-linux-x64.tar.xz</code>
+So as example v12.x.x or any other version will be links like this:
+<BR><code>https://nodejs.org/dist/v12.18.3/node-v12.18.3-linux-x64.tar.xz</code>
 
 <BR><BR>
 Then unarchive the downloaded archive and run a terminal inside of the unarchived folder:
-<BR><code>cd node-v10.10.0-linux-x64/</code>
+<BR><code>cd node-v12.18.3-linux-x64/</code>
 <BR><code>sudo cp * /usr/local/ -r</code>
 
 <BR><BR>You can verify if the install was successfully by using:
@@ -3976,17 +3975,17 @@ Then unarchive the downloaded archive and run a terminal inside of the unarchive
 
 
         <strong style="font-weight:bold; font-size:25px;">
-        Download Fedora v28 & CentOS 7:</strong>
+        Download Fedora & CentOS:</strong>
 
  <BR>
-Here we download Node.js v10.x with curl and then we will install it!
-  <BR>  <code style="font-size:16px;">curl --silent --location https://rpm.nodesource.com/setup_10.x | sudo bash -
+Here we download Node.js v12.x with curl and then we will install it!
+  <BR>  <code style="font-size:16px;">curl --silent --location https://rpm.nodesource.com/setup_12.x | sudo bash -
  <BR>sudo yum -y install nodejs</code>
 
 
  <BR>  <BR>
-        Alternative you can use my 1-Click file which will first remove Node.js and then download & Install Node.js v10.x (This file will also work if you never installed Node.js before)
-  <BR>       <code>INSTALL THIS/SOFTWARE/Node.js/Linux/#NODE.JS v10.x - REMOVE FIRST - THEN REINSTALL - FEDORA&CENTOS.sh / .command</code>
+        Alternative you can use my 1-Click file which will first remove Node.js and then download & Install Node.js v12.x (This file will also work if you never installed Node.js before)
+  <BR>       <code>INSTALL THIS/SOFTWARE/Node.js/Linux/#NODE.JS v12.x - REMOVE FIRST - THEN REINSTALL - FEDORA&CENTOS.sh / .command</code>
 
 
 
